--- a/app/admin/template/sales/invoice.twig
+++ b/app/admin/template/sales/invoice.twig
@@ -878,7 +878,8 @@
 				set_vat_regime();
 				check_total_price();
 
-				$('input.price, input.qty').mask('AAAAAAAAAAAAAASAA', {'translation': {
+				$('input.price, input.qty').mask('dAAAAAAAAAAAAAASAA', {'translation': {
+					d: {pattern: /-|''/, optional: true},
 					A: {pattern: /\d/, optional: true},
 					S: {pattern: /\./, optional: true}
 					}, placeholder: "0.00"
@@ -937,7 +938,8 @@
 			}
 
 			$(document).ready(function() {
-				$('input.price, input.qty').mask('AAAAAAAAAAAAAASAA', {'translation': {
+				$('input.price, input.qty').mask('dAAAAAAAAAAAAAASAA', {'translation': {
+					d: {pattern: /-|''/, optional: true},
 					A: {pattern: /\d/, optional: true},
 					S: {pattern: /\./, optional: true}
 					}, placeholder: "0.00"
