--- a/app/admin/template/administrative/customer/recurring.twig
+++ b/app/admin/template/administrative/customer/recurring.twig
@@ -42,6 +42,6 @@
 		</div>
 		{% endif %}
 	{% else %}
-		<p>{% trans "No recurring invoice queues found for this customer." %}
+		<p><em>{% trans "No recurring invoice queues found for this customer." %}</em></p>
 	{% endfor %}
 {% endblock tab %}
