--- a/app/admin/template/administrative/customer.twig
+++ b/app/admin/template/administrative/customer.twig
@@ -8,205 +8,73 @@
 	{% if action == 'add' %}
 
 		{% include 'administrative/customer/add.twig' %}
-		<ol class="breadcrumb">
-				<li><a href="/">{% trans "Home" %}</a></li>
-				<li><a href="/administrative/customer">{% trans "Customers" %}</a></li>
-				<li class="active">{% trans "Add customer" %}</li>
-		</ol>
 
-		{% if errors is defined %}
-		<div class="alert alert-danger">
-				{% trans "The form contains mistakes. Please correct them." %}
-		</div>
-		{% endif %}
-
-		<form class="form form-horizontal form-condensed" method="post" action="/administrative/customer?action=add">
-		<div class="panel panel-default">
-			<div class="panel-body">
-
-					<div class="form-group{% if 'company' in errors|keys %} has-error{% endif %}">
-						<label for="company" class="col-xs-3 control-label">{% trans "Company" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="customer[company]" id="company" class="form-control" value="{{ env.post.customer.company }}">
-							{{ form.invalid_input('company', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'firstname' in errors|keys %} has-error{% endif %}">
-						<label for="firstname" class="col-xs-3 control-label">{% trans "Firstname" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="customer[firstname]" id="firstname" class="form-control" value="{{ env.post.customer.firstname }}">
-							{{ form.invalid_input('firstname', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'lastname' in errors|keys %} has-error{% endif %}">
-						<label for="lastname" class="col-xs-3 control-label">{% trans "Lastname" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="customer[lastname]" id="lastname" class="form-control" value="{{ env.post.customer.lastname }}">
-							{{ form.invalid_input('lastname', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'street' in errors|keys %} has-error{% endif %}">
-						<label for="street" class="col-xs-3 control-label">{% trans "Street" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="customer[street]" id="street" class="form-control" value="{{ env.post.customer.street }}">
-							{{ form.invalid_input('street', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'housenumber' in errors|keys %} has-error{% endif %}">
-						<label for="housenumber" class="col-xs-3 control-label">{% trans "Housenumber" %}</label>
-						<div class="col-xs-2">
-							<input type="text" name="customer[housenumber]" id="housenumber" class="form-control" value="{{ env.post.customer.housenumber }}">
-							{{ form.invalid_input('housenumber', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'zipcode' in errors|keys %} has-error{% endif %}">
-						<label for="zipcode" class="col-xs-3 control-label">{% trans "Zip code" %}</label>
-						<div class="col-xs-2">
-							<input type="text" name="customer[zipcode]" id="zipcode" class="form-control" value="{{ env.post.customer.zipcode }}">
-							{{ form.invalid_input('zipcode', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'city' in errors|keys %} has-error{% endif %}">
-						<label for="city" class="col-xs-3 control-label">{% trans "City" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="customer[city]" id="city" class="form-control" value="{{ env.post.customer.city }}">
-							{{ form.invalid_input('city', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'country_id' in errors|keys %} has-error{% endif %}">
-						<label for="country_id" class="col-xs-3 control-label">{% trans "Country" %}</label>
-						<div class="col-xs-5">
-							<select name="customer[country_id]" class="form-control" onchange="change_country();">
-							{% for group in countries|keys  %}
-								{% if group == 'european' %}
-									<optgroup label="{% trans "European" %}">
-								{% else %}
-									<optgroup label="{% trans "Rest of the world" %}">
-								{% endif %}
-
-								{% for country in countries[group] %}
-									<option value="{{ country.id }}" data-iso2="{{ country.iso2 }}" {% if env.post.customer.country_id == country.id %}selected="selected"{% elseif env.post.customer.country_id is not defined and country.id == 203 %}selected="selected"{% endif %}>{{ attribute(country, 'text_' ~ env.language.name_short ~ '_name') }}</option>
-								{% endfor %}
-								</optgroup>
-							{% endfor %}
-							</select>
-							{{ form.invalid_input('country_id', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'email' in errors|keys %} has-error{% endif %}">
-						<label for="email" class="col-xs-3 control-label">{% trans "Email" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="customer[email]" id="email" class="form-control" value="{{ env.post.customer.email }}">
-							{{ form.invalid_input('email', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'phone' in errors|keys %} has-error{% endif %}">
-						<label for="phone" class="col-xs-3 control-label">{% trans "Phone" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="customer[phone]" id="phone" class="form-control" value="{{ env.post.customer.phone }}">
-							{{ form.invalid_input('phone', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'mobile' in errors|keys %} has-error{% endif %}">
-						<label for="mobile" class="col-xs-3 control-label">{% trans "Mobile" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="customer[mobile]" id="mobile" class="form-control" value="{{ env.post.customer.mobile }}">
-							{{ form.invalid_input('mobile', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'fax' in errors|keys %} has-error{% endif %}">
-						<label for="fax" class="col-xs-3 control-label">{% trans "Fax" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="customer[fax]" id="fax" class="form-control" value="{{ env.post.customer.fax }}">
-							{{ form.invalid_input('fax', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group{% if 'vat' in errors|keys %} has-error{% endif %}">
-						<label for="vat" class="col-xs-3 control-label">{% trans "Vat" %}</label>
-						<div class="col-xs-1"><input type="text" class="form-control" id="vat_prefix" readonly value="AT" /></div>
-						<div class="col-xs-4">
-							<input type="text" name="customer[vat]" id="vat" class="form-control" value="{{ env.post.customer.vat }}">
-							{{ form.invalid_input('vat', errors) }}
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label for="language_id" class="col-xs-3 control-label">{% trans "Language" %}</label>
-						<div class="col-xs-4">
-							{{ form.select_language(languages, 'customer[language_id]', 'language_id', env.post.customer.language_id) }}
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Comments" %}</label>
-						<div class="col-xs-5">
-							<textarea name="customer[comment]" class="form-control">{{ env.post.customer.comment }}</textarea>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<div class="col-xs-5 col-xs-offset-3">
-							<button class="btn btn-primary">
-								{% trans "Save" %}
-							</button>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</form>
-		<script type="text/javascript">
-			function change_country() {
-				iso2 = $('select[name="customer[country_id]"] option:selected').attr('data-iso2');
-				$('#vat_prefix').val(iso2);
-			}
-			change_country();
-		</script>
 	{% elseif action == 'export' %}
 
 		{% include 'administrative/customer/export.twig' %}
 
 	{% elseif env.module.get_name() != 'administrative_customer' %}
 
-		<ol class="breadcrumb">
-			<li><a href="/">{% trans "Home" %}</a></li>
-			<li><a href="/administrative/customer">{% trans "Customers" %}</a></li>
-			<li class="active">{{ customer.firstname }} {{ customer.lastname }}</li>
-		</ol>
-
-		<ul class="nav nav-tabs">
-			<li {% if env.module.get_name() == 'administrative_customer_detail' %}class="active"{% endif %}>
-				<a href="/administrative/customer/detail?id={{ customer.id }}">{% trans "Details" %}</a>
-			</li>
-			<li {% if env.module.get_name() == 'administrative_customer_contact' %}class="active"{% endif %}>
-				<a href="/administrative/customer/contact?id={{ customer.id }}">{% trans "Contacts" %}</a>
-			</li>
-			<li {% if env.module.get_name() == 'administrative_customer_invoice' %}class="active"{% endif %}>
-				<a href="/administrative/customer/invoice?id={{ customer.id }}">{% trans "Invoices" %}</a>
-			</li>
-			<li {% if env.module.get_name() == 'administrative_customer_recurring' %}class="active"{% endif %}>
-				<a href="/administrative/customer/recurring?id={{ customer.id }}">{% trans "Recurring invoice queue" %}</a>
-			</li>
-			<li {% if env.module.get_name() == 'administrative_customer_document' %}class="active"{% endif %}>
-				<a href="/administrative/customer/document?id={{ customer.id }}">{% trans "Documents" %}</a>
-			</li>
-		</ul>
-
-		<div class="tab-content">
-			{% block tab %}{% endblock tab %}
+		<div class="row">
+			<div class="col">
+				<h4>{% trans "Customers" %}</h4>
+			</div>
+			<div class="col">
+				<div class="float-end">
+					<nav aria-label="breadcrumb">
+						<ol class="breadcrumb">
+							<li class="breadcrumb-item">
+								<a href="/administrative/customer">
+									{% trans "Customers" %}
+								</a>
+							</li>
+							<li class="breadcrumb-item active">
+								{% trans "Customer" %} {{ customer.get_display_name() }}
+							</li>
+						</ol>
+					</nav>
+				</div>
+			</div>
 		</div>
+
+		<div class="card">
+			<div class="card-header">
+				<ul class="nav nav-tabs card-header-tabs" data-bs-tabs="tabs">
+					<li class="nav-item">
+						<a href="/administrative/customer/detail?id={{ customer.id }}" class="nav-link {% if env.module.get_name() == 'administrative_customer_detail' %}active{% endif %}">
+							{% trans "Details" %}
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/administrative/customer/contact?id={{ customer.id }}" class="nav-link {% if env.module.get_name() == 'administrative_customer_contact' %}active{% endif %}">
+							{% trans "Contacts" %}
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/administrative/customer/invoice?id={{ customer.id }}" class="nav-link {% if env.module.get_name() == 'administrative_customer_invoice' %}active{% endif %}">
+							{% trans "Invoices" %}
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/administrative/customer/recurring?id={{ customer.id }}" class="nav-link {% if env.module.get_name() == 'administrative_customer_recurring' %}active{% endif %}">
+							{% trans "Recurring invoice queue" %}
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/administrative/customer/document?id={{ customer.id }}" class="nav-link {% if env.module.get_name() == 'administrative_customer_document' %}active{% endif %}">
+							{% trans "Documents" %}
+						</a>
+					</li>
+				</ul>
+			</div>
+
+			<div class="card-body tab-content">
+				<div class="tab-pane show active">
+					{% block tab %}{% endblock tab %}
+				</div>
+			</div>
+		</div>
+
 	{% else %}
 
 		<div class="row">
