--- a/app/admin/template/administrative/supplier.twig
+++ b/app/admin/template/administrative/supplier.twig
@@ -4,175 +4,74 @@
 
 {% block content %}
 
-	{% if env.module.get_name() != 'administrative_supplier' %}
+	{% if action == 'add' %}
 
-		<ol class="breadcrumb">
-			<li><a href="/">{% trans "Home" %}</a></li>
-			<li><a href="/administrative/supplier">{% trans "Suppliers" %}</a></li>
-			<li class="active">{% trans "Edit supplier" %}</li>
-		</ol>
+		{% include 'administrative/supplier/add.twig' %}
 
-		<ul class="nav nav-tabs">
-			<li {% if env.module.get_name() == 'administrative_supplier_detail' %}class="active"{% endif %}>
-				<a href="/administrative/supplier/detail?id={{ supplier.id }}">{% trans "Details" %}</a>
-			</li>
-			<li {% if env.module.get_name() == 'administrative_supplier_document' %}class="active"{% endif %}>
-				<a href="/administrative/supplier/document?id={{ supplier.id }}">{% trans "Documents" %}</a>
-			</li>
-		</ul>
+	{% elseif env.module.get_name() != 'administrative_supplier' %}
 
-		<div class="tab-content">
-			{% block tab %}{% endblock tab %}
-		</div>
-
-	{% elseif action == 'add' %}
-
-		<ol class="breadcrumb">
-			<li><a href="/">{% trans "Home" %}</a></li>
-			<li><a href="/administrative/supplier">{% trans "Suppliers" %}</a></li>
-			<li class="active">{% trans "Add supplier" %}</li>
-		</ol>
-
-		{% if errors is defined %}
-		<div class="alert alert-danger">
-			{% trans "The form contains mistakes. Please correct them." %}
-		</div>
-		{% endif %}
-
-		<form class="form form-horizontal form-condensed" method="post" action="/administrative/supplier?action=add">
-			<div class="card">
-				<div class="card-header">
-					{% trans "Details" %}
-				</div>
-				<div class="card-body">
-
-					<div class="row mb-3{% if 'company' in errors|keys %} has-error{% endif %}">
-						<label for="company" class="col-form-label col-3 text-end">{% trans "Company" %}</label>
-						<div class="col-5">
-							<input type="text" name="supplier[company]" id="company" class="form-control" value="{{ env.post.supplier.company }}">
-							{{ form.invalid_input('company', errors) }}
-						</div>
-					</div>
-
-					<div class="row mb-3">
-						<label class="col-form-label col-3 text-end">{% trans "Street" %}</label>
-						<div class="col-5"><input type="text" name="supplier[street]" class="form-control" value="{{ env.post.supplier.street }}"/></div>
-					</div>
-
-					<div class="row mb-3">
-						<label class="col-form-label col-3 text-end">{% trans "Housenumber" %}</label>
-						<div class="col-5"><input type="text" name="supplier[housenumber]" class="form-control" value="{{ env.post.supplier.housenumber }}"/></div>
-					</div>
-
-					<div class="row mb-3">
-						<label class="col-form-label col-3 text-end">{% trans "Zipcode" %}</label>
-						<div class="col-5"><input type="text" name="supplier[zipcode]" class="form-control" value="{{ env.post.supplier.zipcode }}"/></div>
-					</div>
-
-					<div class="row mb-3">
-						<label class="col-form-label col-3 text-end">{% trans "City" %}</label>
-						<div class="col-5"><input type="text" name="supplier[city]" class="form-control" value="{{ env.post.supplier.city }}"/></div>
-					</div>
-
-					<div class="row mb-3 {% if 'country_id' in errors|keys %} has-error{% endif %}">
-						<label for="country_id" class="col-form-label col-3 text-end">{% trans "Country" %}</label>
-						<div class="col-5">
-							<select name="supplier[country_id]" class="form-control" onchange="change_country();">
-							{% for group in countries|keys  %}
-								{% if group == 'european' %}
-									<optgroup label="{% trans "European" %}">
-								{% else %}
-									<optgroup label="{% trans "Rest of the world" %}">
-								{% endif %}
-
-								{% for country in countries[group] %}
-									<option value="{{ country.id }}" data-iso2="{{ country.iso2 }}" {% if env.post.supplier.country_id == country.id %}selected="selected"{% endif %}>{{ attribute(country, 'text_' ~ env.language.name_short ~ '_name') }}</option>
-								{% endfor %}
-								</optgroup>
-							{% endfor %}
-							</select>
-						</div>
-					</div>
-
-					<div class="row mb-3{% if 'vat' in errors|keys %} has-error{% endif %}">
-						<label for="vat" class="col-form-label col-3 text-end">{% trans "Vat" %}</label>
-						<div class="col-1"><input type="text" class="form-control" id="vat_prefix" readonly value="AT" /></div>
-						<div class="col-4">
-							<input type="text" name="supplier[vat]" id="vat" class="form-control" value="{{ env.post.supplier.vat }}">
-							{{ form.invalid_input('vat', errors) }}
-						</div>
-					</div>
-
-					<div class="row mb-3{% if 'accounting_identifier' in errors|keys %} has-error{% endif %}">
-						<label for="accounting_identifier" class="col-form-label col-3 text-end">{% trans "Accounting identifier" %}</label>
-						<div class="col-5">
-							<input type="text" name="supplier[accounting_identifier]" id="vat" class="form-control" value="{{ supplier.accounting_identifier }}">
-							{{ form.invalid_input('accounting_identifier', errors) }}
-						</div>
-					</div>
-
-                    <div class="row mb-3{% if 'iban' in errors|keys %} has-error{% endif %}">
-						<label for="accounting_identifier" class="col-form-label col-3 text-end">{% trans "IBAN" %}</label>
-						<div class="col-5">
-							<input type="text" name="supplier[iban]" id="iban" class="form-control" value="{% if supplier.iban is defined %}{{ supplier.iban }}{% elseif env.post.supplier.iban is defined %}{{ env.post.supplier.iban }}{% endif %}">
-							{{ form.invalid_input('iban', errors) }}
-						</div>
-					</div>
-
-					<div class="row mb-3{% if 'bic' in errors|keys %} has-error{% endif %}">
-						<label for="accounting_identifier" class="col-form-label col-3 text-end">{% trans "BIC" %}</label>
-						<div class="col-5">
-							<input type="text" name="supplier[bic]" id="bic" class="form-control" value="{{ supplier.bic }}">
-							{{ form.invalid_input('bic', errors) }}
-						</div>
-					</div>
-
-					<div class="row mb-3">
-					    <label class="col-form-label col-3 text-end">{% trans "Comments" %}</label>
-					    <div class="col-5">
-					        <textarea name="supplier[comment]" class="form-control">{{ env.post.supplier.comment }}</textarea>
-					    </div>
-					</div>
-
-					<div class="row mb-3">
-						<div class="col-3 offset-3">
-							<button class="btn btn-primary">
-								{% trans "Save" %}
-							</button>
-						</div>
-					</div>
-
+		<div class="row">
+			<div class="col">
+				<h4>{% trans "Suppliers" %}</h4>
+			</div>
+			<div class="col">
+				<div class="float-end">
+					<nav aria-label="breadcrumb">
+						<ol class="breadcrumb">
+							<li class="breadcrumb-item">
+								<a href="/administrative/supplier">
+									{% trans "Suppliers" %}
+								</a>
+							</li>
+							<li class="breadcrumb-item active">
+								{% trans "Supplier" %} {{ supplier.company }}
+							</li>
+						</ol>
+					</nav>
 				</div>
 			</div>
-		</form>
-		<script type="text/javascript">
-			$(document).ready(function() {
-				$('input[name="supplier[iban]"]').mask('SSAA AAAA 0000 0000 0000 0000 0000', { placeholder: '____ ____ ____ ____ ____ ____ ____'  });
-			});
+		</div>
 
-			function change_country() {
-				iso2 = $('select[name="supplier[country_id]"] option:selected').attr('data-iso2');
-				$('#vat_prefix').val(iso2);
-			}
-			change_country();
-		</script>
+		<div class="card">
+			<div class="card-header">
+				<ul class="nav nav-tabs card-header-tabs" data-bs-tabs="tabs">
+					<li class="nav-item">
+						<a href="/administrative/supplier/detail?id={{ supplier.id }}" class="nav-link {% if env.module.get_name() == 'administrative_supplier_detail' %}active{% endif %}">
+							{% trans "Details" %}
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/administrative/supplier/document?id={{ supplier.id }}" class="nav-link {% if env.module.get_name() == 'administrative_supplier_document' %}active{% endif %}">
+							{% trans "Documents" %}
+						</a>
+					</li>
+				</ul>
+			</div>
+
+			<div class="card-body tab-content">
+				<div class="tab-pane show active">
+					{% block tab %}{% endblock tab %}
+				</div>
+			</div>
+		</div>
 
 	{% else %}
 
-		<ol class="breadcrumb">
-			<li><a href="/">{% trans "Home" %}</a></li>
-			<li class="active">{% trans "Suppliers" %}</li>
-		</ol>
+		<div class="row">
+			<div class="col">
+				<h4>{% trans "Supplier" %}</h4>
+			</div>
+		</div>
 
-		<div class="card">
+		<div class="card mb-3">
 			<div class="card-header">
 				{% trans "Filter" %}
 			</div>
 			<div class="card-body">
-				<form method="post" action="/administrative/supplier" class="form-horizontal">
+				<form method="post" action="/administrative/customer" class="form-horizontal">
 					<div class="row mb-3">
 						<label class="col-form-label col-3 text-end">{% trans "Search" %}</label>
-						<div class="col-5">
+						<div class="col-9">
 							<input type="text" name="search" class="form-control" value="{{ pager.get_search() }}">
 						</div>
 					</div>
