--- a/app/admin/template/sales/creditnote.twig
+++ b/app/admin/template/sales/creditnote.twig
@@ -3,7 +3,140 @@
 {% import '_default/macro.base.twig' as base %}
 
 {% block content %}
-	{% if action == 'create_step1' %}
+	{% if action == 'edit' %}
+
+		<div class="row">
+			<div class="col">
+				<h4>{% trans "Credit notes" %}</h4>
+			</div>
+			<div class="col">
+				<div class="float-end">
+					<nav aria-label="breadcrumb">
+						<ol class="breadcrumb">
+							<li class="breadcrumb-item">
+								<a href="/sales/creditnote">
+									{% trans "Credit notes" %}
+								</a>
+							</li>
+							<li class="breadcrumb-item active">
+								{% trans "Credit note" %} {{ creditnote.number }}
+							</li>
+						</ol>
+					</nav>
+				</div>
+			</div>
+		</div>
+	
+		{% include 'sales/creditnote/offcanvas.twig' %}
+
+		{% if env.sticky_session.message == 'updated' %}
+			<div class="alert alert-success alert-dismissible fade show" role="alert">
+				{{ "Credit note successfully updated and regenerated" }}
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
+		{% endif %}		
+
+		<div class="row">
+			<div class="col-md-4" id="creditnote-customer">
+				<address>
+					<div class="text-muted">{% trans "Customer" %}</div>
+					<strong>{{ creditnote.customer.get_display_name() }}</strong><br>
+					{{ creditnote.customer.street }} {{ creditnote.customer.housenumber }}<br>
+					{{ creditnote.customer.zipcode }} {{ creditnote.customer.city }}<br>
+					{{ attribute(creditnote.customer.country, 'text_' ~ env.language.name_short ~ '_name') }}<br>
+					<a href="mailto:{{ creditnote.customer.email }}">{{ creditnote.customer.email }}</a>
+				</address>
+			</div>
+
+			<div class="col-md-4" id="creditnote-contact">
+				<address>
+					<div class="text-muted">{% trans "Credit note to" %}</div>
+					<strong>{{ creditnote.customer_contact.get_display_name() }}</strong><br>
+					{{ creditnote.customer_contact.street }} {{ creditnote.customer_contact.housenumber }}<br>
+					{{ creditnote.customer_contact.zipcode }} {{ creditnote.customer_contact.city }}<br>
+					{{ attribute(creditnote.customer_contact.country, 'text_' ~ env.language.name_short ~ '_name') }}<br>
+					<a href="mailto:{{ creditnote.customer_contact.email }}">{{ creditnote.customer_contact.email }}</a><br>
+					{{ creditnote.customer_contact.get_vat_formatted() }}
+				</address>
+			</div>
+
+			<div class="col-md-4">
+				<strong>{% trans "Credit note number" %}: </strong>{{ creditnote.number }}<br>
+				<strong>{% trans "Paid" %}: </strong>
+					{% if creditnote.paid %}
+						<span class="badge text-bg-success">{% trans "Yes" %}</span>
+					{% else %}
+						<span class="badge text-bg-danger">{% trans "No" %}</span>
+					{% endif %}
+				<br>
+
+				<button class="mt-3 btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+					{% trans "More information" %} >>
+				</button>
+			</div>
+		</div>
+
+		<hr>
+
+		<table class="table table-striped table-hover table-condensed">
+			<thead>
+				<tr>
+					<th>{% trans "Product" %}</th>
+					<th width="50%">{% trans "Description" %}</th>
+					<th width="95">{% trans "VAT" %}</th>
+					<th width="95">{% trans "Qty" %}</th>
+					<th class="{% if creditnote.vat_mode == 'line' %}text-muted{% endif %} text-right" width="95">{% trans "Item ex. VAT" %}</th>
+					<th class="{% if creditnote.vat_mode == 'group' %}text-muted{% endif %} text-right" width="95">{% trans "Item inc. VAT" %}</th>
+					<th class="{% if creditnote.vat_mode == 'line' %}text-muted{% endif %} text-right" width="95">{% trans "Total ex. VAT" %}</th>
+					<th class="{% if creditnote.vat_mode == 'group' %}text-muted{% endif %} text-right" width="95">{% trans "Total inc. VAT" %}</th>
+				</tr>
+			</thead>
+			<tbody>
+			{% for creditnote_item in creditnote.get_creditnote_items() %}
+
+				<tr>
+					<td>{% if creditnote_item.product_type_id is defined %}{{ creditnote_item.product_type.name }}{% else %}<i>{% trans "Unknown" %}</i>{% endif %}</td>
+					<td>{{ creditnote_item.description|nl2br }}</td>
+					<td>{{ creditnote_item.vat_rate_value|number_format }}%</td>
+					<td>{{ creditnote_item.qty|number_format }}</td>
+					<td class="{% if creditnote.vat_mode == 'line' %}text-muted{% endif %} text-right">&euro;{{ (creditnote_item.qty != 0 ? creditnote_item.get_price_excl()/creditnote_item.qty : creditnote_item.price_excl)|number_format }}</td>
+					<td class="{% if creditnote.vat_mode == 'group' %}text-muted{% endif %} text-right">&euro;{{ (creditnote_item.qty != 0 ? creditnote_item.get_price_incl()/creditnote_item.qty : creditnote_item.price_incl)|number_format }}</td>
+					<td class="{% if creditnote.vat_mode == 'line' %}text-muted{% endif %} text-right">&euro;{{ creditnote_item.get_price_excl()|number_format }}</td>
+					<td class="{% if creditnote.vat_mode == 'group' %}text-muted{% endif %} text-right">&euro;{{ creditnote_item.get_price_incl()|number_format }}</td>
+				</tr>
+			{% endfor %}
+			<tr>
+				<td colspan="6"><strong>{% trans "Total" %}</strong></td>
+				<td class="{% if creditnote.vat_mode == 'line' %}text-muted{% endif %} text-right"><strong>&euro;{{ creditnote.get_price_excl()|number_format }}</strong></td>
+				<td class="{% if creditnote.vat_mode == 'group' %}text-muted{% endif %} text-right"><strong>&euro;{{ creditnote.get_price_incl()|number_format }}</strong></td>
+			</tr>
+			</tbody>
+		</table>
+
+		<table class="table table-striped table-hover table-condensed">
+			<thead>
+				<th>{% trans "VAT Rate" %}</th>
+				<th class="text-right" width="95">{% trans "Base" %}</th>
+				<th class="text-right" width="95">{% trans "VAT" %}</th>
+			</thead>
+			<tbody>
+			{% set vat_total = 0 %}
+			{% for creditnote_vat in creditnote.get_creditnote_vat() %}
+				{% set vat_total = vat_total + creditnote_vat.vat %}
+				<tr>
+					<td>{{ creditnote_vat.vat_rate.name }} ({{ creditnote_vat.rate }}%)</td>
+					<td class="text-right">&euro;{{ creditnote_vat.base }}</td>
+					<td class="text-right">&euro;{{ creditnote_vat.vat }}</td>
+				</tr>
+			{% endfor %}
+			</tbody>
+			<tr>
+				<td colspan="2"><strong>{% trans "Total" %}</strong></td>
+				<td class="text-right"><strong>&euro;{{ vat_total|number_format }}</strong></td>
+			</tr>
+		</table>		
+	
+	{% elseif action == 'create_step1' %}
 		{% include 'sales/creditnote/create/step1.twig' %}	
 	{% elseif action == 'create_step2' %}
 		{% include 'sales/creditnote/create/step2.twig' %}	
@@ -15,7 +148,7 @@
 		</ol>
 
 		{% if env.sticky_session.message is defined %}
-			{{ base.display_flash_message(env.sticky_session.message, 'invoice') }}
+			{{ base.display_flash_message(env.sticky_session.message, 'credit note') }}
 		{% endif %}
 
 		<div class="row">
@@ -78,7 +211,7 @@
 						<dl class="dl-horizontal">
 							<dt>{% trans "Name" %}</dt>
 							<dd>
-								<a href="/administrative/customer?action=edit&id={{ invoice.customer.id }}" title="">
+								<a href="/administrative/customer?action=edit&id={{ creditnote.customer.id }}" title="">
 									{{ creditnote.customer.firstname }} {{ creditnote.customer.lastname }}
 								</a>
 							</dd>
@@ -128,7 +261,7 @@
 		</div>
 
 		<div class="card">
-			<div class="card-header">{% trans "Invoice details" %}</div>
+			<div class="card-header">{% trans "Credit note details" %}</div>
 			<div class="card-body">
 				<table class="table table-striped table-hover table-condensed">
 					<thead>
