--- a/app/admin/template/sales/invoice/create/step2.twig
+++ b/app/admin/template/sales/invoice/create/step2.twig
@@ -30,10 +30,16 @@
 </div>
 {% endif %}
 
+<div class="card">
+	<div class="card-header">
+		{% trans "Select invoice contact" %}
+	</div>
+	<div class="card-body">
+
 		<div class="row">
 		{% for customer_contact in customer_contacts %}
 			<div class="col-3">
-				<div class="card customer_contact" data-customer-contact-id="{{ customer_contact.id }}">
+				<div class="card customer_contact h-100" data-customer-contact-id="{{ customer_contact.id }}">
 					<div class="card-body">
 						<span class="badge bg-secondary actions visually-hidden">
 							<a href="#manage-customer-contact" class="text-white" data-bs-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contact-id="{{ customer_contact.id }}">
@@ -42,7 +48,7 @@
 							<a href="javascript:void(0);" class="text-white" onclick="delete_contact({{ customer_contact.id }})">
 								<i data-feather="trash-2"></i>
 							</a>
-						</span>					
+						</span>
 
 						{{ base.customer_contact(customer_contact, settings) }}
 					</div>
@@ -50,11 +56,14 @@
 			</div>
 		{% endfor %}
 			<div class="col-3">
-				<div class="card ">
-					<div class="card-body text-center customer_contact h-100">
-						<a class="btn btn-primary" href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contacts="0">
-							{% trans "Create new" %}
-						</a>
+				<div class="card h-100">
+					<div class="card-body d-flex h-100 w-100 text-center">
+						<div class="align-self-center w-100">
+							<a class="btn btn-primary" href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contacts="0">
+								{% trans "Create new contact" %}
+							</a>
+						</div>
+
 					</div>
 				</div>
 			</div>
@@ -66,7 +75,8 @@
 				{% trans "Next" %}
 			</button>
 		</form>
-
+	</div>
+</div>
 
 <script type="text/javascript">
 
