B#29564 Fix for class being declared twice + small typo fix

--- a/app/admin/template/mobile/register.twig
+++ b/app/admin/template/mobile/register.twig
@@ -8,7 +8,7 @@
 		<h3>{% trans "Register smartphone" %}</h3>
 
 		<div class="alert alert-info">
-			{% trans "Your smartphone is not yet registered." %} {% trans "Please open your Tinyinvoice webinterface an scan the QR code associated with your account." %}
+			{% trans "Your smartphone is not yet registered." %} {% trans "Please open your Tinyinvoice webinterface and scan the QR code associated with your account." %}
 		</div>
 
 		<div class="row">
@@ -17,7 +17,7 @@
 				<canvas id="canvas" hidden class="img-responsive"></canvas>
 		  	</div>
 		</div>
-
+		<br>
 		<div class="row">
 			<div class="col-xs-12">
 				<a href="/mobile" class="btn btn-default btn-block">{% trans "Back" %}</a>
